# mpi-market-intelligence

./: .gitignore  PIPELINE_DESIGN.md  README.md  main.py  probe_rbi.py  probe_rbi_playwright.py  pyproject.toml
src/: forecast.py  ingestion.py
